external-crates/move/move-compiler/tests/move_2024/typing/dot_call_fails_to_resolve_help_under_alias.exp
error[E04023]: invalid method style call
   ┌─ tests/move_2024/typing/dot_call_fails_to_resolve_help_under_alias.move:34:9
   │
34 │         p.z();
   │         ^^^^^
   │         │ │
   │         │ No local 'use fun' alias was found for '(a=0x42)::space::Point.z', and no function 'z' was found in the defining module '(a=0x42)::space'
   │         Invalid method style syntax usage. Unbound alias for method style call of 'z' on type '(a=0x42)::space::Point'

error[E04023]: invalid method style call
   ┌─ tests/move_2024/typing/dot_call_fails_to_resolve_help_under_alias.move:35:9
   │
35 │         p.l();
   │         ^^^^^
   │         │ │
   │         │ No local 'use fun' alias was found for '(a=0x42)::space::Point.l', and no function 'l' was found in the defining module '(a=0x42)::space'
   │         Invalid method style syntax usage. Unbound alias for method style call of 'l' on type '(a=0x42)::space::Point'

